<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00D60000"
        android:backgroundTint="#00FA0000"
        android:foregroundTint="#00DA0000">


        <TextView
            android:id="@+id/make_model"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/maker_model"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/price"
            android:layout_width="133dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="78dp"
            android:gravity="center"
            android:hint="@string/price"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vehicleDescription"
            android:layout_width="226dp"
            android:layout_height="112dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="44dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_model" />

        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="113dp"
            android:layout_height="49dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="76dp"
            android:hint="@string/last_updated"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="246dp"
            android:layout_height="191dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/car_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">

        <Spinner
            android:id="@+id/makerSpinner2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp" />

        <Spinner
            android:id="@+id/modelSpinner2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="140dp" />

        <ListView
            android:layout_marginTop="50dp"
            android:id="@+id/listOfModels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:footerDividersEnabled="false" />

    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>